--- a/SNSSample1/App.config
+++ b/SNSSample1/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
     <add key="AWSProfileName" value="default"/>
-    <add key="AWSRegion" value="us-west-2" />
+    <add key="AWSRegion" value="sa-east-1" />
   </appSettings>
 </configuration>
